--- a/Zuzel/Zuzel/Zuzel.csproj
+++ b/Zuzel/Zuzel/Zuzel.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AIMotorMovement.cs" />
+    <Compile Include="FpsMonitor.cs" />
     <Compile Include="Intersect.cs" />
     <Compile Include="GameConstants.cs" />
     <Compile Include="Laps.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="TireMark.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
