added tournament and sounds

--- a/Zuzel/Zuzel/Zuzel.csproj
+++ b/Zuzel/Zuzel/Zuzel.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="TireMark.cs" />
+    <Compile Include="Tournament.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
