--- a/Zuzel/Zuzel/Zuzel.csproj
+++ b/Zuzel/Zuzel/Zuzel.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Skin.cs" />
     <Compile Include="TireMark.cs" />
     <Compile Include="Tournament.cs" />
   </ItemGroup>
