--- a/Zuzel/Zuzel/Zuzel.csproj
+++ b/Zuzel/Zuzel/Zuzel.csproj
@@ -80,10 +80,13 @@
     <Compile Include="Laps.cs" />
     <Compile Include="Motor.cs" />
     <Compile Include="Objekt.cs" />
+    <Compile Include="Particle.cs" />
+    <Compile Include="ParticleSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Skin.cs" />
+    <Compile Include="SmokePlumeParticleSystem.cs" />
     <Compile Include="TireMark.cs" />
     <Compile Include="Tournament.cs" />
   </ItemGroup>
