added saving state without skin

--- a/Zuzel/Zuzel/Zuzel.csproj
+++ b/Zuzel/Zuzel/Zuzel.csproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <Compile Include="AIMotorMovement.cs" />
     <Compile Include="FpsMonitor.cs" />
+    <Compile Include="Handlers.cs" />
     <Compile Include="Intersect.cs" />
     <Compile Include="GameConstants.cs" />
     <Compile Include="Laps.cs" />
